# strugglemeals

./: .env.example  .gitignore  README.md  package.json  roadmap.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  railway.toml
backend/.sqlx/: query-0fac2251fa88d8b6907209c3c0cf54be6dc1214e5fb78e764b940fbdd2886644.json  query-29baed39c3df1365c8e4ac046eb3de93f0960b06dcd4f98848ccbbe846b9dc46.json  query-3008b3621c32ac3d2dea1249b99716ba5c6b73f9b815bbc5fc245537c91c32f9.json  query-3243c70f1a326e5039d16419c8e632bccc32ecda17dfd1eedd14b10179cdf49c.json  query-548e373ce6b04a4e6804c53a9c544dafda7feea2fdf6b13f35a44cb669858957.json  query-5a50a4861de2598abc5c169dff83a7b7fc57961f786066e6c874e98c2da33891.json  query-88be83589b13ee6fc8672ee99cd8f40278bc3790a4ed7f0c219dbe47319ef1c8.json  query-a253451a877757ff4467aa78d6aa4ba265e5f78a103ad83ab65aa3a4f809a755.json
backend/migrations/: 001_user_data.sql
backend/src/: ai.rs  auth.rs  favourites.rs  health.rs  history.rs  lib.rs  main.rs  recipes.rs  upload.rs
backend/tests/: auth_integration.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: footer.tsx  header.tsx
frontend/src/components/cook/: IngredientInput.tsx  MethodSelector.tsx  RecipeModal.tsx  ShortlistView.tsx
frontend/src/components/sections/: examples.tsx  hero.tsx  how-it-works.tsx  philosophy.tsx  results.tsx  vision.tsx  waitlist.tsx
frontend/src/components/ui/: image-reveal.tsx
frontend/src/hooks/: usePageTitle.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CookPage.tsx  FavouritesPage.tsx  HistoryPage.tsx
frontend/src/stack/: client.ts
pipeline/: process.py  requirements.txt
